[package]
name    = "dbproject"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio  = { version = "1.44.1", features = ["full"] }
sqlx   = { version = "0.8.3", features = ["mysql", "runtime-tokio", "chrono"] }
chrono = "0.4.40"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"